--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "heroku": "^7.42.6",
     "knex": "^0.21.2",
     "pg": "^8.3.0",
     "ts-node": "^8.10.2",
