--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "knex": "^0.21.2",
     "pg": "^8.3.0",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
-  },
-  "devDependencies": {
+    "typescript": "^3.9.7",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "ts-node-dev": "^1.0.0-pre.56"
+  },
+  "devDependencies": {
+   
   }
 }
